traces/bug_709.txt
src/medit/inout_morice.c:1268: error: DEAD_STORE
  The value written to &iord (type int) is never used.
Showing all 1 steps of the trace


src/medit/inout_morice.c:1268:2: Write of unused value
1266.   	for (i=0; i<3; i++)
1267.   	  mesh->sol[k].m[i] = m[i] = fbuf[off+i];
1268.   	iord = eigen2(m,lambda,vp);
         ^
1269.   	mesh->sol[k].bb = min(lambda[0],lambda[1]);
1270.   	if ( mesh->sol[k].bb < mesh->bbmin )  mesh->bbmin = mesh->sol[k].bb;
